metadata/force-app/main/default/objects/CustomName_NVuag__c/CustomName_NVuag__c.object-meta.xml
<CustomObject>
    <description>Description_pNMxn</description>
    <label>CustomLabel_WDzLv</label>
    <nameField>
        <label>CustomLabel_WDzLv</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_WDzLvs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>