metadata/force-app/main/default/objects/CustomName_NVuag__c/fields/CustomField_TgSCZ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_TgSCZ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldeDYZH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>