metadata/force-app/main/default/objects/CustomName_NVuag__c/fields/CustomField_tjASt__c.field-meta.xml
<CustomField>
    <fullName>CustomField_tjASt__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldlsInC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>